Configured build to use errorprone compiler refs TweetWallFX/TweetwallFX#468

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ buildscript {
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.+'
         classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.6.2'
-        gradleApi()
+        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: '0.6'
     }
 }
 
@@ -52,6 +52,7 @@ subprojects {
         apply plugin: 'jacoco'
         apply plugin: 'eclipse'
         apply plugin: 'nebula.info'
+        apply plugin: "net.ltgt.errorprone"
 
         group = 'org.tweetwallfx'
         version = '1.0'
@@ -61,6 +62,7 @@ subprojects {
         }
 
         dependencies {
+            errorproneJavac group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.1'
             testCompile group: 'junit', name: 'junit', version: versionJUnit
             testCompile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
         }
