--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,12 @@ buildscript {
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.+'
         classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.6.2'
+        classpath group: 'com.github.ben-manes', name: 'gradle-versions-plugin', version: '0.20.0'
         gradleApi()
     }
 }
 
+apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'build-dashboard'
 apply plugin: 'org.sonarqube'
 
