--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ buildscript {
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.+'
         classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.6.2'
-        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: '0.6'
+        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin
     }
 }
 
@@ -62,7 +62,7 @@ subprojects {
         }
 
         dependencies {
-            errorproneJavac group: 'com.google.errorprone', name: 'error_prone_core', version: '2.3.1'
+            errorproneJavac group: 'com.google.errorprone', name: 'error_prone_core', version: versionErrorProneCore
             testCompile group: 'junit', name: 'junit', version: versionJUnit
             testCompile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
         }
