--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,8 @@
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
+versionErrorProneCore=2.3.1
+versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
 versionGroovy=2.5.0
 versionGroovy=2.4.15
