Configured version numbers in gradle.properties file. refs TweetWallFX/TweetwallFX#469

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
+versionGradleVersionsPlugin=0.20.0
 versionGradleInfoPlugin=4.+
 versionGroovy=2.5.0
 versionGroovy=2.4.15
