--- a/gradle.properties
+++ b/gradle.properties
@@ -25,8 +25,10 @@
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
-versionGradleVersionsPlugin=0.20.0
+versionErrorProneCore=2.3.1
+versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
+versionGradleVersionsPlugin=0.20.0
 versionGroovy=2.5.0
 versionGroovy=2.4.15
 versionJUnit=4.12
