Updated jgit dependencies to latest release of major version 5 fixes TweetWallFX/TweetwallFX#473

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,7 @@ versionGradleInfoPlugin=4.+
 versionGradleVersionsPlugin=0.20.0
 versionGroovy=2.5.0
 versionGroovy=2.4.15
+versionJGit=5.+
 versionJUnit=4.12
 versionJackson=2.+
 versionJasson=1.0.1
