--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -24,7 +24,7 @@
 
 dependencies {
     compile group: 'javax.cache', name: 'cache-api', version: versionCacheApi
-    compile group: 'org.ehcache', name: 'ehcache', version: '3.3.0'
+    compile group: 'org.ehcache', name: 'ehcache', version: versionEHCache
     runtime group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: versionLog4j
 
     compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
