--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,7 +24,7 @@
 
 dependencies {
     compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
-    compile group: 'com.vdurmont', name: 'emoji-java', version: '3.1.3'
+    compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':TweetWallFX-Tweet-API')
     compile project(':TweetWallFX-Configuration')
 }
