--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
+versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.1
 versionGradleErrorpronePlugin=0.6
