Updated jgit dependencies to latest release of major version 5 (#475)
fixes TweetWallFX/TweetwallFX#473

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
 versionGradleVersionsPlugin=0.20.0
 versionGroovy=2.5.2
+versionJGit=5.+
 versionJUnit=4.12
 versionJackson=2.+
 versionJasson=1.0.1
