--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
+    compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx
     compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':TweetWallFX-Tweet-API')
     compile project(':TweetWallFX-Configuration')
