--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ versionCacheApi=1.1.0
 versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.1
+versionFontawesomefx=8.9
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
 versionGradleVersionsPlugin=0.20.0
@@ -36,10 +37,12 @@ versionJGit=5.+
 versionJUnit=4.12
 versionJackson=2.+
 versionJasson=1.0.1
+versionJavaEEAPI=8.0
 versionJavaxJson=1.1.2
 versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
 versionLog4j=2.11.1
+versionSonarqubeGradlePlugin=2.6.2
 versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=1.6.4
 versionSpotless=3.15.0
