Created new subproject StepEngine-API and move the APIs for StepEngine into that project. refs TweetWallFX/TweetwallFX#444

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,8 @@ include ':config'
 project(":config").name = "TweetWallFX-Configuration"
 include ':controls'
 project(":controls").name = "TweetWallFX-Controls"
+include ':stepengine-api'
+project(":stepengine-api").name = "TweetWallFX-StepEngine-API"
 include ':tweet-api'
 project(":tweet-api").name = "TweetWallFX-Tweet-API"
 include ':tweet-stepengine'
