--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,8 @@ include ':controls'
 project(":controls").name = "TweetWallFX-Controls"
 include ':stepengine-api'
 project(":stepengine-api").name = "TweetWallFX-StepEngine-API"
+include ':stepengine-steps'
+project(":stepengine-steps").name = "TweetWallFX-StepEngine-Steps"
 include ':tweet-api'
 project(":tweet-api").name = "TweetWallFX-Tweet-API"
 include ':tweet-stepengine'
