--- a/stepengine-steps/build.gradle
+++ b/stepengine-steps/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2014-2018 TweetWallFX
+ * Copyright 2018 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,10 +23,5 @@
  */
 
 dependencies {
-    compile group: 'javax.cache', name: 'cache-api', version: versionCacheApi
-    compile group: 'org.ehcache', name: 'ehcache', version: versionEHCache
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: versionLog4j
-
-    compile project(':TweetWallFX-Core')
-    compile project(':TweetWallFX-StepEngine-Steps')
+    compile project(':TweetWallFX-StepEngine-API')
 }
