Updated tweetwallConfig.json for correct class name of PauseStep. refs TweetWallFX/TweetwallFX#444

--- a/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
@@ -41,7 +41,7 @@
                 "stepClassName": "org.tweetwallfx.controls.steps.CloudToTweetStep"
             },
             {
-                "stepClassName": "org.tweetwallfx.controls.steps.PauseStep",
+                "stepClassName": "org.tweetwallfx.stepengine.steps.PauseStep",
                 "config": {
                     "amount": 5,
                     "unit": "SECONDS"
