--- a/devoxx-2017-us/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-us/src/main/resources/tweetwallConfig.json
@@ -22,7 +22,7 @@
                 "stepClassName": "org.tweetwallfx.controls.steps.CloudToTweetStep"
             },
             {
-                "stepClassName": "org.tweetwallfx.controls.steps.PauseStep",
+                "stepClassName": "org.tweetwallfx.stepengine.steps.PauseStep",
                 "config": {
                     "amount": 5,
                     "unit": "SECONDS"
