Updated tweetwallConfig.json for correct class name of NextTweetStep. refs TweetWallFX/TweetwallFX#444

--- a/devoxx-2017-us/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-us/src/main/resources/tweetwallConfig.json
@@ -10,7 +10,7 @@
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
             },
             {
-                "stepClassName": "org.tweetwallfx.controls.steps.NextTweetStep"
+                "stepClassName": "org.tweetwallfx.stepengine.steps.NextTweetStep"
             },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.AddTweetToCloudStep"
