--- a/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
@@ -29,7 +29,7 @@
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
             },
             {
-                "stepClassName": "org.tweetwallfx.controls.steps.NextTweetStep"
+                "stepClassName": "org.tweetwallfx.stepengine.steps.NextTweetStep"
             },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.AddTweetToCloudStep"
