#444 Moved StepEngine and some general implementation into new subprojects.
* Created new subproject StepEngine-API and moved the APIs for StepEngine into that project.
* Moved PauseStep into newly created subproject StepEngine-Steps.
* Moved TweetDataProvider into newly created subproject StepEngine-DataProviders.
* Moved NextTweetStep into subproject StepEngine-Steps.
* Moved ImageMosaicDataProvider into subproject StepEngine-DataProviders.
* Updated tweetwallConfig.json for correct class name of PauseStep.
* Updated tweetwallConfig.json for correct class name of NextTweetStep.
fixes TweetWallFX/TweetwallFX#444

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,12 @@ include ':config'
 project(":config").name = "TweetWallFX-Configuration"
 include ':controls'
 project(":controls").name = "TweetWallFX-Controls"
+include ':stepengine-api'
+project(":stepengine-api").name = "TweetWallFX-StepEngine-API"
+include ':stepengine-dataproviders'
+project(":stepengine-dataproviders").name = "TweetWallFX-StepEngine-DataProviders"
+include ':stepengine-steps'
+project(":stepengine-steps").name = "TweetWallFX-StepEngine-Steps"
 include ':tweet-api'
 project(":tweet-api").name = "TweetWallFX-Tweet-API"
 include ':tweet-stepengine'
