--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2014-2017 TweetWallFX
+ * Copyright 2014-2018 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,13 +23,6 @@
  */
 
 dependencies {
-    compile group: 'javax.cache', name: 'cache-api', version: versionCacheApi
-    compile group: 'org.ehcache', name: 'ehcache', version: versionEHCache
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: versionLog4j
-
-    compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
-    runtime group: 'org.eclipse', name: 'yasson', version: versionJasson
-    runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
-
     compile project(':TweetWallFX-Core')
+    compile project(':TweetWallFX-StepEngine-DataProviders')
 }
