--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,7 @@ allprojects {
                 '**/*.asc',
                 '**/*.json',
                 '**/*.md',
+                '**/*.properties',
                 '**/.gitignore'
 
             trimTrailingWhitespace()
@@ -145,6 +146,10 @@ allprojects {
             compile group: 'org.codehaus.groovy', name: 'groovy-all', version: versionGroovy
             testCompile group: 'org.spockframework', name: 'spock-core', version: versionSpockFramework
         }
+    }
+
+    tasks.withType(org.gradle.api.tasks.testing.Test) {
+        systemProperty 'org.tweetwallfx.tests.executeCFPClientLiveTests', executeCFPClientLiveTests
     }
 }
 
