--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,9 @@
 # THE SOFTWARE.
 #
 
+# properties configuring build
+executeCFPClientLiveTests=false
+
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
