--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,7 @@ versionJUnit=4.12
 versionJackson=2.+
 versionJasson=1.0.1
 versionJavaEEAPI=8.0
+versionJavaxWsRsAPI=2.1.1
 versionJavaxJson=1.1.2
 versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
