Introduced Logging project hiding the log4j-core dependency from compile configuration of consumers of that subproject. Moved LoggingConfigurator onto that project. fixes TweetWallFX/TweetwallFX#523

--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,8 @@ include ':config'
 project(":config").name = "TweetWallFX-Configuration"
 include ':controls'
 project(":controls").name = "TweetWallFX-Controls"
+include ':logging'
+project(":logging").name = "TweetWallFX-Logging"
 include ':stepengine-api'
 project(":stepengine-api").name = "TweetWallFX-StepEngine-API"
 include ':stepengine-dataproviders'
