--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -25,10 +25,6 @@
 apply plugin: 'java-library'
 
 dependencies {
-    api project(':TweetWallFX-Logging')
-    api project(':TweetWallFX-Utility')
-}
-
-test {
-    systemProperty 'org.tweetwall.config.fileName', 'myCustomConfig.json'
+    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
 }
