Provided EHCache Configuration configurable via tweetwall configuration. Configured an urlContent cache that - as its name suggests - caches the content of an URL. Provided URLContentCache to interact with that configured cache. Used URLContentCache in ImageMosaicDataProvider. fixes TweetWallFX/TweetwallFX#522

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,8 @@
 
 rootProject.name='TweetWallFX'
 
+include ':cache'
+project(":cache").name = "TweetWallFX-Cache"
 include ':config'
 project(":config").name = "TweetWallFX-Configuration"
 include ':controls'
