--- a/gradle.properties
+++ b/gradle.properties
@@ -39,11 +39,10 @@ versionGroovy=2.5.2
 versionJGit=5.+
 versionJUnit=4.12
 versionJackson=2.+
-versionJasson=1.0.1
 versionJavaEEAPI=8.0
-versionJavaxWsRsAPI=2.1.1
 versionJavaxJson=1.1.3
 versionJavaxJsonBindAPI=1.0
+versionJavaxWsRsAPI=2.1.1
 versionJersey=2.27
 versionLog4j=2.11.1
 versionSonarqubeGradlePlugin=2.6.2
@@ -51,3 +50,4 @@ versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=1.6.4
 versionSpotless=3.15.0
 versionTwitter4j=4.0.7
+versionYasson=1.0.2
