--- a/stepengine-dataproviders/src/main/resources/tweetwallConfig.json
+++ b/stepengine-dataproviders/src/main/resources/tweetwallConfig.json
@@ -21,6 +21,27 @@
                         "unit": "GB"
                     }
                 ]
+            },
+            "photoImage": {
+                "keyType": "java.lang.String",
+                "valueType": "org.tweetwallfx.cache.URLContent",
+                "contentLoaderThreads": 2,
+                "expiry": {
+                    "type": "TIME_TO_IDLE",
+                    "amount": 14,
+                    "unit": "DAYS"
+                },
+                "cacheResources": [
+                    {
+                        "type": "HEAP",
+                        "amount": 100
+                    },
+                    {
+                        "type": "DISK",
+                        "amount": 2,
+                        "unit": "GB"
+                    }
+                ]
             }
         }
     }
