Removed capital letters from project names. Also Project grouping of devoxx-2017-be and devoxx-2018-pl now working. fixes TweetWallFX/TweetwallFX#570

--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -23,6 +23,6 @@
  */
 
 dependencies {
-    compile project(':TweetWallFX-Core')
-    compile project(':TweetWallFX-Controls')
+    compile project(':tweetwallfx-core')
+    compile project(':tweetwallfx-controls')
 }
