--- a/javaone/build.gradle
+++ b/javaone/build.gradle
@@ -35,6 +35,6 @@ task('debug', dependsOn: 'classes', type: JavaExec) {
 }
 
 dependencies {
-    compile project(':TweetWallFX-Generic2D')
-    compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
+    compile project(':tweetwallfx-generic2d')
+    compile project(':tweetwallfx-tweet-impl-twitter4j')
 }
