--- a/stepengine-dataproviders/build.gradle
+++ b/stepengine-dataproviders/build.gradle
@@ -25,6 +25,6 @@
 apply plugin: 'java-library'
 
 dependencies {
-    api project(':TweetWallFX-StepEngine-API')
-    api project(':TweetWallFX-Cache')
+    api project(':tweetwallfx-stepengine-api')
+    api project(':tweetwallfx-cache')
 }
