--- a/voxxed-days-zurich/build.gradle
+++ b/voxxed-days-zurich/build.gradle
@@ -40,15 +40,15 @@ task('debug', dependsOn: 'classes', type: JavaExec) {
 }
 
 dependencies {
-    compile project(':TweetWallFX-Devoxx-API-CFP')
-    compile project(':TweetWallFX-Devoxx-CFP-StepEngine')
-    compile project(':TweetWallFX-Generic2D')
-    compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    compile project(':TweetWallFX-Tweet-StepEngine')
+    compile project(':tweetwallfx-devoxx-api-cfp')
+    compile project(':tweetwallfx-devoxx-cfp-stepengine')
+    compile project(':tweetwallfx-generic2d')
+    compile project(':tweetwallfx-tweet-impl-twitter4j')
+    compile project(':tweetwallfx-tweet-stepengine')
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
 
-    runtime project(':TweetWallFX-Devoxx-CFP-Impl')
+    runtime project(':tweetwallfx-devoxx-cfp-impl')
     runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
 
-    testCompile project(':TweetWallFX-Devoxx-CFP-Test')
+    testCompile project(':tweetwallfx-devoxx-cfp-test')
 }
