Configured publishing to Bintray via maven publish. user and key for the publish process are taken from project properties vie BINTRAY_USER and BINTRAY_KEY respectifly. Bintray publish is disabled when travis is building a Pull Request or when either BINTRAY_USER or BINTRAY_KEY is not available as a project property. fixes TweetWallFX/TweetwallFX#569

--- a/devoxx-2015/build.gradle
+++ b/devoxx-2015/build.gradle
@@ -38,3 +38,5 @@ dependencies {
     compile project(':tweetwallfx-generic2d')
     compile project(':tweetwallfx-tweet-impl-twitter4j')
 }
+
+bintrayUpload.enabled = false
