--- a/devoxx-2016/build.gradle
+++ b/devoxx-2016/build.gradle
@@ -38,3 +38,5 @@ dependencies {
     compile project(':tweetwallfx-generic2d')
     compile project(':tweetwallfx-tweet-impl-twitter4j')
 }
+
+bintrayUpload.enabled = false
