--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@
 # THE SOFTWARE.
 #
 
+currentVersion=1.0-SNAPSHOT
+
 # properties configuring build
 executeCFPClientLiveTests=false
 
@@ -32,6 +34,7 @@ versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
 versionFontawesomefx=8.9
+versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
 versionGradleVersionsPlugin=0.20.0
@@ -45,6 +48,7 @@ versionJavaxJsonBindAPI=1.0
 versionJavaxWsRsAPI=2.1.1
 versionJersey=2.27
 versionLog4j=2.11.1
+versionNebulaPublishingPlugin=8.1.0
 versionSonarqubeGradlePlugin=2.6.2
 versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=1.6.4
