Added uncommitted conditions in determination of bintrayEnabledConfigured publishing to Bintray via maven publish. refs TweetWallFX/TweetwallFX#569

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,10 @@ apply plugin: 'com.github.ben-manes.versions'
 
 ext {
     releaseDate = new Date()
-    bintrayEnabled = ('false' != System.getenv('TRAVIS_PULL_REQUEST'))
+    bintrayEnabled = \
+        ('false' != System.getenv('TRAVIS_PULL_REQUEST')) &&
+        hasProperty('BINTRAY_USER') &&
+        hasProperty('BINTRAY_KEY')
 }
 
 allprojects {
