--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,16 @@ buildscript {
     }
 
     dependencies {
-        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'spotbugs-gradle-plugin', version: versionSpotbugs
+        classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
+        classpath group: 'com.github.ben-manes', name: 'gradle-versions-plugin', version: versionGradleVersionsPlugin
+        classpath group: 'com.jfrog.bintray.gradle', name: 'gradle-bintray-plugin', version: versionGradleBintrayPlugin
         classpath group: 'com.netflix.nebula', name: 'gradle-info-plugin', version: versionGradleInfoPlugin
+        classpath group: 'com.netflix.nebula', name: 'nebula-publishing-plugin', version: versionNebulaPublishingPlugin
+        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'spotbugs-gradle-plugin', version: versionSpotbugs
+        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin
         // VCS dependency required by plugin 'gradle-info-plugin'
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: versionJGit
-        classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: versionSonarqubeGradlePlugin
-        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin
-        classpath group: 'com.github.ben-manes', name: 'gradle-versions-plugin', version: versionGradleVersionsPlugin
     }
 }
 
@@ -48,9 +50,18 @@ apply plugin: 'org.sonarqube'
 // applying Versions plugin
 apply plugin: 'com.github.ben-manes.versions'
 
+ext {
+    releaseDate = new Date()
+    bintrayEnabled = \
+        ('false' != System.getenv('TRAVIS_PULL_REQUEST')) &&
+        hasProperty('BINTRAY_USER') &&
+        hasProperty('BINTRAY_KEY')
+}
+
 allprojects {
     group = 'org.tweetwallfx'
-    version = '1.0'
+    version = currentVersion
+    description = 'JavaFX based Tweetwall'
 
     repositories {
         jcenter()
@@ -92,6 +103,7 @@ allprojects {
         apply plugin: 'jacoco'
         apply plugin: 'eclipse'
         apply plugin: 'nebula.info'
+        apply plugin: 'maven-publish'
 
         dependencies {
             testCompile group: 'junit', name: 'junit', version: versionJUnit
@@ -153,6 +165,63 @@ allprojects {
                 }
             }
         }
+
+        apply plugin: 'nebula.maven-publish'
+        apply plugin: 'nebula.javadoc-jar'
+        apply plugin: 'nebula.source-jar'
+        apply plugin: 'nebula.publish-verification'
+
+        // configuring Bintray Upload
+        apply plugin: 'com.jfrog.bintray'
+        bintray {
+            user = findProperty('BINTRAY_USER') // null if not found
+            key = findProperty('BINTRAY_KEY') // null if not found
+
+            dryRun = true //[Default: false] Whether to run this as dry-run, without deploying
+            publish = false //[Default: false] Whether version should be auto published after an upload
+            override = project.version.endsWith('-SNAPSHOT') //[Default: false] Whether to override version artifacts already published
+
+            publications = ['nebula']
+
+            pkg {
+                repo = 'maven'
+                name = rootProject.group
+                userOrg = 'tweetwallfx-team'
+                desc = project.description
+
+                websiteUrl = 'https://github.com/TweetWallFX/TweetwallFX'
+                issueTrackerUrl = 'https://github.com/TweetWallFX/TweetwallFX/issues'
+                vcsUrl = 'https://github.com/TweetWallFX/TweetwallFX.git'
+
+                licenses = ['MIT']
+
+                labels = ['tweetwall', 'javafx']
+                publicDownloadNumbers = false
+                //attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
+
+                githubRepo = 'TweetWallFX/TweetwallFX' //Optional Github repository
+                githubReleaseNotesFile = 'README.adoc'      //Optional Github readme file
+
+                version {
+                    name = project.version
+                    desc = "Tweetwall FX ${project.version}"
+                    released = releaseDate
+                    vcsTag = project.version
+                    //attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
+
+                    //Optional configuration for Maven Central sync of the version
+                    mavenCentralSync {
+                        sync = false //[Default: true] Determines whether to sync the version to Maven Central.
+                        // user = 'userToken' //OSS user token: mandatory
+                        // password = 'paasword' //OSS user password: mandatory
+                        // close = '1' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
+                    }
+                }
+            }
+        }
+
+        bintrayUpload.enabled = bintrayEnabled
+        bintrayPublish.enabled = bintrayEnabled
     }
 
     plugins.withType(org.gradle.api.plugins.GroovyPlugin) {
@@ -166,8 +235,6 @@ allprojects {
         systemProperty 'org.tweetwallfx.tests.executeCFPClientLiveTests', executeCFPClientLiveTests
     }
 }
-
-description = 'TweetWallFX'
 
 task createFolders(description: 'Creates the folders for the projects and sourceSets should they not exist.') doLast {
     rootProject.allprojects.each {p ->
