Corrected dependant task names for run tasks in main project. fixes TweetWallFX/TweetwallFX#606

--- a/build.gradle
+++ b/build.gradle
@@ -254,6 +254,6 @@ task createFolders(description: 'Creates the folders for the projects and source
     }
 }
 
-task ('runDevoxx2017BE-Exhibition', dependsOn: ':devoxx-2017-be:Exhibition:run')
-task ('runDevoxx2017BE-Cinema', dependsOn: ':devoxx-2017-be:Cinema:run')
-task ('runVDZ', dependsOn: ':TweetWallFX-Voxxed-Days-Zurich:run')
+task ('runDevoxx2017BE-Exhibition', dependsOn: ':tweetwallfx-devoxx-2017-be:tweetwallfx-devoxx-2017-be-cinema:run')
+task ('runDevoxx2017BE-Cinema', dependsOn: ':tweetwallfx-devoxx-2017-be:tweetwallfx-devoxx-2017-be-exhibition:run')
+task ('runVDZ', dependsOn: ':tweetwallfx-voxxed-days-zurich:run')
