--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@
 # THE SOFTWARE.
 #
 
-currentVersion=1.0-SNAPSHOT
+currentVersion=1.0.0
 
 # properties configuring build
 executeCFPClientLiveTests=false
