Added filter chain subproject and default chain for tweets. FilterChain configurations by name with steps allowing indeterminate and determinate evaluation of an object. Added default accepting filter chain for tweets.
fixes TweetWallFX/TweetwallFX#332

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,8 @@ include ':config'
 project(":config").name = "tweetwallfx-configuration"
 include ':controls'
 project(":controls").name = "tweetwallfx-controls"
+include ':filterchain'
+project(":filterchain").name = "tweetwallfx-filterchain"
 include ':logging'
 project(":logging").name = "tweetwallfx-logging"
 include ':stepengine-api'
