Made gradle check run javadoc task.
fixes TweetWallFX/TweetwallFX#612

--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,10 @@ allprojects {
             jvmArgs '--add-modules java.xml.bind'
         }
 
+        check {
+            dependsOn 'javadoc'
+        }
+
         // configuring Errorprone
         apply plugin: "net.ltgt.errorprone"
 
