Added DataProvider.Scheduled and removed UpdateXYZ Steps. DataProvider.Scheduled allows a DataProvider to be scheduled at a fixed rated or with a fixed delay. Changed those DataProviders manually updated by UpdateXYZ Steps into DataProvider.Scheduled and thus removed necessity of the UpdateXYZ Steps.
fixes TweetWallFX/TweetwallFX#554

--- a/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
@@ -10,13 +10,6 @@
     "stepEngine": {
         "steps": [
             {
-                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateScheduleResults",
-                "config": {
-                    "initialOffset": 5,
-                    "updateInteval": 15
-                }
-            },
-            {
                 "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17ShowSchedule"
             },
             {
@@ -24,9 +17,6 @@
             },
             {
                 "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17FlipInTweets"
-            },
-            {
-                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateVotingResults"
             },
             {
                 "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17FlipOutScheduleToday"
@@ -66,6 +56,13 @@
             }
         ],
         "dataProviderSettings": [
+            {
+                "dataProviderClassName": "org.tweetwallfx.devoxx.cfp.stepengine.dataprovider.ScheduleDataProvider",
+                "config": {
+                    "initialDelay": 300,
+                    "scheduleDuration": 900
+                }
+            },
             {
                 "dataProviderClassName": "org.tweetwallfx.tweet.stepengine.dataprovider.TweetStreamDataProvider",
                 "config": {
