--- a/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
@@ -8,14 +8,16 @@
         "stylesheetResource": "tweetwall.css"
     },
     "stepEngine": {
-        "steps": [
+        "dataProviderSettings": [
             {
-                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateScheduleResults",
+                "dataProviderClassName": "org.tweetwallfx.devoxx.cfp.stepengine.dataprovider.ScheduleDataProvider",
                 "config": {
-                    "initialOffset": 5,
-                    "updateInteval": 15
+                    "initialDelay": 300,
+                    "scheduleDuration": 900
                 }
-            },
+            }
+        ],
+        "steps": [
             {
                 "stepClassName": "org.tweetwallfx.devoxx17be.exhibition.Devoxx17ShowSchedule"
             },
