--- a/build.gradle
+++ b/build.gradle
@@ -177,7 +177,7 @@ allprojects {
             user = findProperty('BINTRAY_USER') // null if not found
             key = findProperty('BINTRAY_KEY') // null if not found
 
-            dryRun = true //[Default: false] Whether to run this as dry-run, without deploying
+            dryRun = false //[Default: false] Whether to run this as dry-run, without deploying
             publish = false //[Default: false] Whether version should be auto published after an upload
             override = project.version.endsWith('-SNAPSHOT') //[Default: false] Whether to override version artifacts already published
 
