Update Beans properties in devoxx-api-cfp project to current state of CFP API for Devoxx 2018 BE. fixes TweetWallFX/TweetwallFX#629

--- a/devoxx-cfp-test/build.gradle
+++ b/devoxx-cfp-test/build.gradle
@@ -24,4 +24,5 @@
 dependencies {
     compile project(':tweetwallfx-devoxx-cfp-impl')
     compile group: 'junit', name: 'junit', version: versionJUnit
+    compile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
 }
